<resources>

    <string name="app_name">Neredesin</string>
    <string name="title_activity_user_location_main">UserLocationMainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">@string/app_name</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>


    <!--ORDER BY ACTIVITIES-->

    <!--Common Strings-->
    <string name="button_back">Back Button</string>
    <string name="error">HATA</string>
    <!--Common Strings End-->

    <!--Welcome Activity-->
    <string name="welcome_main_text">Hoşgeldiniz.</string>
    <string name="welcome_sub_text">Devam etmek için lütfen giriş yapın.</string>
    <string name="welcome_button_text">Giriş Yap</string>
    <string name="welcome_member_text">Henüz bir kaydınız yok mu?</string>
    <string name="welcome_register_text">Üye olun.</string>
    <!--Welcome Activity End-->

    <!--Login Activity-->
    <string name="login_main_text">Giriş Yap</string>
    <string name="login_email_hint">neredesin@gmail.com</string>
    <string name="login_password_hint">* * * * * * * * * </string>
    <string name="login_help_text">Yardım ?</string>
    <string name="login_button_text">Giriş Yap</string>
    <string name="login_member_text">Henüz bir kaydınız yok mu?</string>
    <string name="login_register_text">Üye olun.</string>

    <string name="login_email_null_error">E-Mail adresi boş bırakılamaz!</string>
    <string name="login_password_null_error">Parola boş bırakılamaz!</string>
    <string name="login_wrong_info">Yanlış e-mail veya şifre girdiniz.</string>

    <string name="login_alert_title">Bağlantı Sorunu!</string>
    <string name="login_alert_text">Giriş yapmak için lütfen internet bağlantınızı aktif hale getiriniz.</string>
    <string name="login_alert_positive_text">İnternet Ayarlarına Git</string>
    <string name="login_alert_negative_text">Anladım</string>
    <!--Login Activity End-->

    <!--Register Activity-->
    <string name="register_main_text">Kayıt Ol</string>
    <string name="register_username_hint">Kullanıcı Adı</string>
    <string name="register_email_hint">Email Adresi</string>
    <string name="register_password_hint">Parola</string>
    <string name="register_password_confirm_hint">Parolayı Yinele</string>
    <string name="register_button_text">Devam Et</string>

    <string name="register_username_null_error">Kullanıcı adı boş bırakılamaz!</string>
    <string name="register_username_min_char_error">Kullanıcı adı en az 5 karakter olmalıdır.</string>
    <string name="register_username_max_char_error">Kullanıcı adı 15 karakterden uzun olamaz.</string>

    <string name="register_email_null_error">Email adresi boş bırakılamaz!</string>
    <string name="register_email_wrong_error">Girilen mail adresi geçerli değil!</string>
    <string name="register_email_duplicate_error">Bu e-mail zaten kayıtlı.</string>

    <string name="register_password_null_error">Şifre alanı boş bırakılamaz.</string>
    <string name="register_password_confirm_null_error">Şifre tekrarlama alanı boş bırakılamaz.</string>
    <string name="register_password_confirm_not_match_error">Girilen parolalar aynı değil.</string>

    <string name="register_check_information">Bilgileriniz kontrol ediliyor…</string>
    <string name="register_alert_text">Kayıt işlemine devam edebilmek için lütfen internet bağlantınızı aktif hale getiriniz.</string>

    <string name="register_alert_title">Bağlantı Sorunu!</string>
    <string name="register_alert_positive_text">İnternet Ayarlarına Gidin</string>
    <string name="register_alert_negative_text">Anladım</string>
    <!--Register Activity End-->

    <!--Gallery Activity-->
    <string name="gallery_profile_text">Profil</string>
    <string name="gallery_image_text">Lütfen aşağıdaki kutucuktan profil resmi seçiniz.</string>
    <string name="gallery_name_hint">Adınız</string>
    <string name="gallery_surname_hint">Soyadınız</string>
    <string name="gallery_phone_hint">Cep Telefonunuz</string>
    <string name="gallery_button_text">Devam Et</string>

    <string name="gallery_profile_picture_error">Lütfen profil resmi seçiniz.</string>
    <string name="gallery_name_null_error">Ad alanı boş bırakılamaz.</string>
    <string name="gallery_surname_null_error">Soyad alanı boş bırakılamaz.</string>
    <string name="gallery_phone_null_error">Telefon numarası boş bırakılamaz!</string>
    <string name="gallery_phone_wrong_error">Telefon numarası geçerli bir numara değil!</string>
    <!--Gallery Activity End-->

    <!--Invite Code Activity-->
    <string name="invite_code_text">Kaydı Tamamla</string>
    <string name="invite_code_sub_text">Size özel bu kod ile kayıt işleminiz tamamlanacaktır.</string>
    <string name="invite_code_code_text">* * * * * * * * *</string>
    <string name="invite_code_button_text">Kayıt Ol</string>

    <string name="invite_code_progress">Bilgileriniz kaydediliyor…</string>
    <string name="invite_code_successful">Başarıyla kaydedildi.</string>
    <string name="invite_code_failed">Kayıt işlemi sırasında bir hata oluştu.</string>
    <string name="invite_code_alert_title">Bağlantı Sorunu!</string>
    <string name="invite_code_alert_text">Kayıt işlemini tamamlayabilmek için lütfen internet bağlantınızı aktif hale getiriniz.</string>
    <string name="invite_code_alert_positive_text">İnternet Ayarlarına Git</string>
    <string name="invite_code_alert_negative_text">Anladım</string>
    <!--Invite Code Activity End-->

    <!--User Location Main Activity-->
    <string name="user_me">Ben</string>
    <string name="user_add_friend">Arkadaşınızı Ekleyin</string>
    <string name="user_get_invite_code">Davet Kodu Paylaş</string>
    <string name="user_invite_code_prefix">Neredesin uygulaması davet kodum:</string>
    <string name="user_invite_code_copied">Davet kodunuz kopyalandı.</string>
    <string name="user_gps_whatsApp">Konumumu Whatsapp"'"ta Paylaş </string>
    <string name="user_gps_whatsApp_text">Şu an buradayım: https://www.google.com/maps/@</string>
    <string name="user_sign_out">Oturumu Kapat</string>
    <string name="action_location_settings">GPS Ayarları</string>

    <string name="user_sharing_settings_title">Paylaşım Ayarları</string>
    <string name="user_sharing_settings_alert_title">Paylaşım ayarlarınızı değiştirebilirsiniz.</string>
    <string name="user_sharing_enable">Paylaşımı Başlat</string>
    <string name="user_sharing_nothing">Geri Dön</string>
    <string name="user_sharing_disable">Paylaşımı Durdur</string>
    <string name="user_sharing_enabled">Artık takip ediliyorsunuz :)</string>
    <string name="user_sharing_disabled">Artık gizleniyorsunuz.</string>

    <string name="user_friends">Arkadaşlarınız</string>
    <string name="user_friends_null_error">Henüz bir arkadaş eklemediniz.</string>
    <string name="user_friend_location_null_error">şu anda çevrimiçi değil!</string>

    <string name="user_location_here">Buradasınız.</string>
    <string name="user_location_distance"> - size uzaklığı: </string>
    <string name="user_location_meter">metre.</string>
    <string name="user_location_km">km.</string>
    <string name="user_location_error">Konumunuz bulunamadı.</string>
    <string name="user_location_alert_text">Konumunuz kapalı. Etkinleştirmek ister misiniz?</string>
    <string name="user_location_alert_positive_text">Konum Ayarlarına Gidin</string>
    <string name="user_location_alert_negative_text">Anladım</string>

    <string name="user_notification_title"> Yakınınızda!</string>
    <string name="user_notification_text">Aramak için tıklayın, veya ona el sallayın :)</string>
    <string name="user_notification_call">Ara</string>

    <string name="user_exit_alert_title">Çıkış Yap</string>
    <string name="user_exit_alert_text">Uygulamadan çıkmak istiyor musunuz?</string>
    <string name="user_exit_alert_positive_text">Çıkış Yap</string>
    <string name="user_exit_alert_negative_text">Geri Dön</string>
    <!--User Location Main Activity End-->

    <!--Add Friend Activity-->
    <string name="add_friend_alert_title">Bağlantı Hatası</string>
    <string name="add_friend_alert_positive_text">Bağlantı Ayarlarına Git</string>
    <string name="add_friend_alert_negative_text">Anladım</string>
    <string name="add_friend_text">Arkadaşınızı Ekleyin</string>
    <string name="add_friend_sub_text">Lütfen arkadaşınızın davet kodunu aşağıdaki alana giriniz veya QR kodunu okutunuz.</string>
    <string name="add_friend_button_text">Ekle</string>
    <string name="add_friend_qr_button_text" translatable="false">QR Oku</string>
    <string name="add_friend_alert_text">Arkadaş ekleyebilmek için lütfen internet bağlantınızı aktif hale getiriniz.</string>
    <string name="add_friend_successful">artık arkadaşınız :)</string>
    <string name="add_friend_failed">Girdiğiniz kod herhangi bir kullanıcıya ait değil!</string>
    <string name="add_friend_null_error">Lütfen geçerli bir davet kodu giriniz.</string>
    <!--Add Friend Activity End-->

    <!-- Referral Code Activity -->
    <string name="referral_code_header" translatable="false">Referans Numaranız</string>
    <string name="referral_code_text" translatable="false">Referans numaranızı QR kod olarak arkadaşınıza gösterebilir veya düz metin olarak paylaşabilirsiniz.</string>
    <string name="referral_code_button_text" translatable="false">Kodu Kopyala</string>
    <!-- Referral Code Activity End-->

</resources>
