<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gps_settings"
        android:onClick="locationSettings"
        android:orderInCategory="100"
        android:title="@string/action_location_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sharing_enable"
        android:onClick="sharing_enable"
        android:orderInCategory="100"
        android:title="@string/user_sharing_enable"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sharing_disable"
        android:onClick="sharing_disable"
        android:orderInCategory="100"
        android:title="@string/user_sharing_disable"
        app:showAsAction="never" />

</menu>
