<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".InviteCodeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/invite_code_text"
        android:textColor="@color/background_gray"
        android:textSize="40sp"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/invite_code_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_invite_code_main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:alpha="0.5"
        android:fontFamily="@font/light"
        android:text="@string/invite_code_sub_text"
        android:textColor="@color/background_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_invite_code_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bold"
        android:text="@string/invite_code_code_text"
        android:textColor="@color/background_gray"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_invite_code"
        style="@style/CustomButton"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="288dp"
        android:text="@string/invite_code_button_text" />

</LinearLayout>