<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/img_register_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/back_button"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/register_main_text"
        android:textColor="@color/background_gray"
        android:textSize="40sp"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_name"
        android:layout_width="match_parent"
        style="@style/CustomTextInput"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/register_username_hint"
        app:startIconDrawable="@drawable/username">

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_email"
        android:layout_width="match_parent"
        style="@style/CustomTextInput"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        app:startIconDrawable="@drawable/email">

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password"
        style="@style/CustomTextInputPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/register_password_hint"
        app:startIconDrawable="@drawable/password">

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_register_password_confirm"
        style="@style/CustomTextInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_confirm_hint"
        app:startIconDrawable="@drawable/password">

        <EditText
            android:id="@+id/et_register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Register"
        style="@style/CustomButton"
        android:text="@string/register_button_text" />

</LinearLayout>