<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bold"
        android:text="@string/welcome_main_text"
        android:textColor="@color/background_white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/invite_code_sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.5"
        android:fontFamily="@font/light"
        android:text="@string/welcome_sub_text"
        android:textColor="@color/background_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/btn_welcome_login"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:text="@string/welcome_button_text"
        android:textAllCaps="false"
        android:textColor="@color/background_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/not_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_code_sub_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/not_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/light"
        android:text="@string/welcome_member_text"
        android:textColor="@color/background_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_welcome_login" />

    <TextView
        android:id="@+id/tv_welcome_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/semibold"
        android:text="@string/welcome_register_text"
        android:textColor="@color/background_red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/not_member"
        app:layout_constraintStart_toEndOf="@+id/not_member" />


</androidx.constraintlayout.widget.ConstraintLayout>