<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="24dp"
    tools:context=".ReferralCodeActivity">

    <ImageView
        android:id="@+id/img_referral_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/bold"
        android:text="@string/referral_code_header"
        android:textColor="@color/background_gray"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:fontFamily="@font/light"
        android:text="@string/referral_code_text"
        android:textColor="@color/background_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/img_qrCode"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_sub_text"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/profile_sub_text"
        app:layout_constraintTop_toBottomOf="@+id/profile_sub_text" />

    <Button
        android:id="@+id/btn_referral_code"
        style="@style/CustomButton"
        android:layout_marginTop="28dp"
        android:text="@string/referral_code_button_text"
        app:layout_constraintEnd_toEndOf="@+id/img_qrCode"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/img_qrCode"
        app:layout_constraintTop_toBottomOf="@+id/img_qrCode" />

</androidx.constraintlayout.widget.ConstraintLayout>